// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LockStore add pending redirection change state correctly 1`] = `
Object {
  "checkPinStatus": "CHECK_PIN_IDLE",
  "inRecovery": "false",
  "isAppLocked": true,
  "isLockEnabled": "false",
  "isTouchIdEnabled": false,
  "pendingRedirection": Array [
    Object {
      "routeName": "home",
    },
  ],
  "showDevMode": false,
}
`;

exports[`LockStore clear pending redirect if clear action is raised 1`] = `
Object {
  "checkPinStatus": "CHECK_PIN_IDLE",
  "inRecovery": "false",
  "isAppLocked": true,
  "isLockEnabled": "false",
  "isTouchIdEnabled": false,
  "pendingRedirection": null,
  "showDevMode": false,
}
`;

exports[`LockStore should set checkPinStatus to idle 1`] = `
Object {
  "checkPinStatus": "CHECK_PIN_FAIL",
  "inRecovery": "false",
  "isAppLocked": true,
  "isLockEnabled": "false",
  "isTouchIdEnabled": false,
  "pendingRedirection": null,
  "showDevMode": false,
}
`;

exports[`LockStore should set checkPinStatus to idle 2`] = `
Object {
  "checkPinStatus": "CHECK_PIN_IDLE",
  "inRecovery": "false",
  "isAppLocked": true,
  "isLockEnabled": "false",
  "isTouchIdEnabled": false,
  "pendingRedirection": null,
  "showDevMode": false,
}
`;
